# pdt

./: LICENSE  README.md  pdt.py  pyproject.toml  requirements.txt
pdt/: config.py  constants.py  logger.py  notifications.py  rdap.py  spaceship.py  storage.py  utils.py
pdt/commands/: __init__.py  appraise.py  backorder.py  config.py  domains.py  watch.py
