[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pdt"
version = "1.0.0"
description = "Pending Delete Domain Tracker — track expiring domains and get drop notifications"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "requests>=2.28",
    "plyer>=2.1",
]

[project.scripts]
pdt = "pdt:cli"

[tool.setuptools]
py-modules = ["pdt"]
